@@ -1,26 +1,25 @@
 package io.swagger.v3.core.util;
 
-import com.fasterxml.jackson.core.JsonParseException;
-import com.fasterxml.jackson.core.JsonParser;
-import com.fasterxml.jackson.databind.DeserializationContext;
-import com.fasterxml.jackson.databind.JsonDeserializer;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import tools.jackson.core.JacksonException;
+import tools.jackson.core.JsonParser;
+import tools.jackson.core.exc.StreamReadException;
+import tools.jackson.databind.DeserializationContext;
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.ObjectMapper;
 import io.swagger.v3.oas.models.security.OAuthFlows;
 import io.swagger.v3.oas.models.security.SecurityScheme;
+import tools.jackson.databind.ValueDeserializer;
 
-import java.io.IOException;
 import java.util.Arrays;
 import java.util.Iterator;
-import java.util.List;
 
-public class SecuritySchemeDeserializer extends JsonDeserializer<SecurityScheme> {
+public class SecuritySchemeDeserializer extends ValueDeserializer<SecurityScheme> {
 
     protected boolean openapi31;
 
     @Override
     public SecurityScheme deserialize(JsonParser jp, DeserializationContext ctxt)
-            throws IOException {
+            throws JacksonException {
         ObjectMapper mapper = null;
         if (openapi31) {
             mapper = Json31.mapper();
@@ -29,15 +28,15 @@ public class SecuritySchemeDeserializer extends JsonDeserializer<SecurityScheme>
         }
         SecurityScheme result = null;
 
-        JsonNode node = jp.getCodec().readTree(jp);
+        JsonNode node = jp.objectReadContext().readTree(jp);
 
         JsonNode inNode = node.get("type");
 
         if (inNode != null) {
-            String type = inNode.asText();
+            String type = inNode.asString();
             if (Arrays.stream(SecurityScheme.Type.values()).noneMatch(t -> t.toString().equals(type))) {
                 // wrong type, throw exception
-                throw new JsonParseException(jp, String.format("SecurityScheme type %s not allowed", type));
+                throw new StreamReadException(jp, "SecurityScheme type %s not allowed".formatted(type));
             }
             result = new SecurityScheme()
                     .description(getFieldText("description", node));
@@ -64,7 +63,7 @@ public class SecuritySchemeDeserializer extends JsonDeserializer<SecurityScheme>
                 result
                         .type(SecurityScheme.Type.MUTUALTLS);
             }
-            final Iterator<String> fieldNames = node.fieldNames();
+            final Iterator<String> fieldNames = node.propertyNames().iterator();
             while(fieldNames.hasNext()) {
                 final String fieldName = fieldNames.next();
                 if(fieldName.startsWith("x-")) {
@@ -85,7 +84,7 @@ public class SecuritySchemeDeserializer extends JsonDeserializer<SecurityScheme>
     private String getFieldText(String fieldName, JsonNode node) {
         JsonNode inNode = node.get(fieldName);
         if (inNode != null) {
-            return inNode.asText();
+            return inNode.asString();
         }
         return null;
     }
