@@ -10,9 +10,12 @@ import static org.testng.Assert.assertNotNull;
 import org.testng.annotations.Test;
 
 import java.nio.file.Files;
-import java.nio.file.Paths;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.JsonNode;
+import java.nio.file.Path;
+
+import tools.jackson.core.StreamReadFeature;
+import tools.jackson.databind.ObjectMapper;
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.json.JsonMapper;
 
 
 public class ArrayOfSubclassTest {
@@ -21,9 +24,11 @@ public class ArrayOfSubclassTest {
     public void extractSubclassArray_oas31() throws Exception {
         ResolvedSchema schema = ModelConverters.getInstance(true).readAllAsResolvedSchema(ModelWithArrayOfSubclasses.Holder.class);
         assertNotNull(schema);
-        String expectedJson = new String(Files.readAllBytes(Paths.get("src/test/java/io/swagger/v3/core/converting/ArrayOfSubclassTest_expected31.json")));
+        String expectedJson = new String(Files.readAllBytes(Path.of("src/test/java/io/swagger/v3/core/converting/ArrayOfSubclassTest_expected31.json")));
         String actualJson = Json31.pretty(schema);
-        ObjectMapper mapper = new ObjectMapper();
+        ObjectMapper mapper = JsonMapper.builder()
+                .enable(StreamReadFeature.INCLUDE_SOURCE_IN_LOCATION)
+                .build();
         JsonNode expectedNode = mapper.readTree(expectedJson);
         JsonNode actualNode = mapper.readTree(actualJson);
         assertEquals(actualNode, expectedNode);
@@ -33,9 +38,11 @@ public class ArrayOfSubclassTest {
     public void extractSubclassArray_oas30() throws Exception {
         ResolvedSchema schema = ModelConverters.getInstance(false).readAllAsResolvedSchema(ModelWithArrayOfSubclasses.Holder.class);
         assertNotNull(schema);
-        String expectedJson = new String(Files.readAllBytes(Paths.get("src/test/java/io/swagger/v3/core/converting/ArrayOfSubclassTest_expected30.json")));
+        String expectedJson = new String(Files.readAllBytes(Path.of("src/test/java/io/swagger/v3/core/converting/ArrayOfSubclassTest_expected30.json")));
         String actualJson = Json31.pretty(schema);
-        ObjectMapper mapper = new ObjectMapper();
+        ObjectMapper mapper = JsonMapper.builder()
+                .enable(StreamReadFeature.INCLUDE_SOURCE_IN_LOCATION)
+                .build();
         JsonNode expectedNode = mapper.readTree(expectedJson);
         JsonNode actualNode = mapper.readTree(actualJson);
         assertEquals(actualNode, expectedNode);
